Feature/stock check (#22)
* Stock check page - selected changes

Add a new tab to the homepage that allows the user to undertake a 'stock check' for a location.

--- a/inventory_app/templates/inventory_app/home.html
+++ b/inventory_app/templates/inventory_app/home.html
@@ -67,6 +67,9 @@
       <form action="/order" method="get">
         <button type="submit">Order</button>
     </form>
+    <form action="/stockcheck" method="get">
+      <button type="submit">Stock Check</button>
+    </form>
     <form action="/track" method="get">
       <button type="submit">Track Withdrawal</button>
     </form>
