--- a/inventory_app/templates/inventory_app/home.html
+++ b/inventory_app/templates/inventory_app/home.html
@@ -11,6 +11,27 @@
   <link rel="stylesheet" href="{% static 'inventory_app/css/home.css' %}">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+  <style>
+    .status-container {
+      display: flex;
+      align-items: center;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+    .status-circle {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+    .status-alive .status-circle {
+      background-color: green;
+    }
+    .status-dead .status-circle {
+      background-color: red;
+    }
+  </style>
+
   <script>
     function filterBySecondColumn() {{
       var filterText = document.getElementById('searchInput').value.toLowerCase(); // Convert to lowercase
@@ -50,6 +71,35 @@
     }}
   }}
 </script>
+
+<script>
+function checkServerStatus() {
+      fetch('/server-status/')
+        .then(response => response.json())
+        .then(data => {
+          var statusContainer = document.getElementById('statusContainer');
+          if (data.status === 'alive') {
+            statusContainer.classList.remove('status-dead');
+            statusContainer.classList.add('status-alive');
+            document.getElementById('statusText').textContent = 'Server is alive';
+          } else {
+            statusContainer.classList.remove('status-alive');
+            statusContainer.classList.add('status-dead');
+            document.getElementById('statusText').textContent = 'Server is not responding';
+          }
+        })
+        .catch(error => {
+          var statusContainer = document.getElementById('statusContainer');
+          statusContainer.classList.remove('status-alive');
+          statusContainer.classList.add('status-dead');
+          document.getElementById('statusText').textContent = 'Server is not responding';
+        });
+    }
+
+    setInterval(checkServerStatus, 5000); // Check every 5 seconds
+</script>
+
+
 </head>
 
 
@@ -57,6 +107,12 @@
 <body>
   <div class="top-container">
     <h1>Inventory Management System</h1>
+
+    <div id="statusContainer" class="status-container status-alive">
+      <div class="status-circle"></div>
+      <div id="statusText">Checking server status...</div>
+    </div>
+
     <div class="button-container">
         <form action="/user" method="get">
             <button type="submit">Withdrawal</button>
@@ -126,6 +182,8 @@
           </table>
       </div>
     </div>
+
+    
 
       <script>
         var ctx = document.getElementById('inventoryChart').getContext('2d');
