--- a/inventory_app/templates/inventory_app/user.html
+++ b/inventory_app/templates/inventory_app/user.html
@@ -5,6 +5,28 @@
 <head>
     <title>Issue Form</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <style>
+        .status-container {
+          display: flex;
+          align-items: center;
+          margin-top: 10px;
+          font-weight: bold;
+        }
+        .status-circle {
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          margin-right: 10px;
+        }
+        .status-alive .status-circle {
+          background-color: green;
+        }
+        .status-dead .status-circle {
+          background-color: red;
+        }
+      </style>
+
     <script>
         $(document).ready(function() {
     $('#item_select').change(function() {
@@ -51,6 +73,33 @@
 
     </script>
 
+<script>
+    function checkServerStatus() {
+          fetch('/server-status/')
+            .then(response => response.json())
+            .then(data => {
+              var statusContainer = document.getElementById('statusContainer');
+              if (data.status === 'alive') {
+                statusContainer.classList.remove('status-dead');
+                statusContainer.classList.add('status-alive');
+                document.getElementById('statusText').textContent = 'Server is alive';
+              } else {
+                statusContainer.classList.remove('status-alive');
+                statusContainer.classList.add('status-dead');
+                document.getElementById('statusText').textContent = 'Server is not responding';
+              }
+            })
+            .catch(error => {
+              var statusContainer = document.getElementById('statusContainer');
+              statusContainer.classList.remove('status-alive');
+              statusContainer.classList.add('status-dead');
+              document.getElementById('statusText').textContent = 'Server is not responding';
+            });
+        }
+    
+        setInterval(checkServerStatus, 5000); // Check every 5 seconds
+    </script>
+
 
     <!-- <script>
         $(document).ready(function() {
@@ -89,6 +138,11 @@
 </head>
 <body>
     <h1>Issue Form</h1>
+
+    <div id="statusContainer" class="status-container status-alive">
+        <div class="status-circle"></div>
+        <div id="statusText">Checking server status...</div>
+      </div>
 
     <div class="button-container">
         <form action="/" method="get">
